feat: Complete CRUD operations for all entities (Edit, Delete, Mark as Received)
- Implemented Edit & Delete for Clients with company assignment
- Implemented Edit & Delete for Employees with employee type, company, and office
- Implemented Edit & Delete for Offices with duplicate address validation
- Implemented Edit, Delete, and Mark as Received for Shipments
- Fixed detached entity issues by using merge() instead of persist()
- Added Employee Type badges and filtering in UI
- Updated all DAOs with proper transaction handling
- Added error alerts for offices with duplicate addresses
- Improved modal forms with proper field validation

All entities now have full CRUD functionality with cascading deletes
and proper foreign key constraints (ON DELETE SET NULL where appropriate).